# crosscopy

./: Cargo.toml  LICENSE  MIGRATION_COMPLETE.md  NETWORK_MIGRATION.md  README.md  verify_migration.py
benches/: clipboard_bench.rs  network_bench.rs
doc/: README.md  api-reference.md  architecture.md  authentication-design.md  authentication-implementation-plan.md  authentication-ui-design.md  development-guide.md  frontend-backend-communication.md  internationalization.md  security-guide.md  state-management.md  technical-specification.md  theming.md  tray-implementation.md  ui-architecture.md  ui-components.md  ui-technical-overview.md  user-manual.md
examples/: README.md  authentication_demo.rs  basic_usage.rs  config_management.rs  custom_config.rs  encryption_demo.rs  libp2p_network_demo.rs  metrics_demo.rs  network_demo.rs  network_discovery_demo.rs  network_monitoring_demo.rs
src/: lib.rs  main.rs
src/clipboard/: content.rs  mod.rs  monitor.rs
src/config/: manager.rs  mod.rs
src/crypto/: encryption.rs  key_manager.rs  mod.rs
src/events/: bus.rs  handlers.rs  mod.rs
src/network/: behaviour.rs  connection.rs  manager.rs  mod.rs  protocol.rs
src/utils/: logger.rs  metrics.rs  mod.rs  platform.rs
tests/: integration_tests.rs  network_libp2p_test.rs  network_manager_verification.rs
tests/common/: mod.rs
